fix: div not showing because of opacity that was in percentage instead of decimals

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -377,7 +377,7 @@ select {
   gap: 1rem;
   color: white;
   background-color: #1a1a1a;
-  opacity: 80%;
+  opacity: 0.8;
   padding: 0.5rem 1rem;
 }
 
