--- a/src/sass/pages/_slide.scss
+++ b/src/sass/pages/_slide.scss
@@ -8,7 +8,7 @@
     gap: 1rem;
     color: base.$clr-white;
     background-color: lighten(base.$clr-dark, 10%);
-    opacity: 80%;
+    opacity: 0.8;
     padding: .5rem 1rem;
 }
 
